RESOLVED FIXED44943
Web Inspector: browser crashes on attempt to evaluate "alert(1)" while staying on a breakpoint
https://bugs.webkit.org/show_bug.cgi?id=44943
Summary Web Inspector: browser crashes on attempt to evaluate "alert(1)" while stayin...
Yury Semikhatsky
Reported 2010-08-31 04:48:12 PDT
Web Inspector: browser crashes on attempt to evaluate "alert(1)" while staying on a breakpoint. In fact the crash happens on any action that requires active dom objects to be suspended.
Attachments
Patch (5.81 KB, patch)
2010-08-31 04:50 PDT, Yury Semikhatsky
no flags
Patch (5.46 KB, patch)
2010-09-02 07:02 PDT, Yury Semikhatsky
joepeck: review+
Yury Semikhatsky
Comment 1 2010-08-31 04:50:37 PDT
Pavel Podivilov
Comment 2 2010-08-31 04:56:06 PDT
(In reply to comment #1) > Created an attachment (id=66034) [details] > Patch Could you please use new test harness (inspector-test2.js)?
Yury Semikhatsky
Comment 3 2010-09-02 07:02:20 PDT
Joseph Pecoraro
Comment 4 2010-09-03 10:50:59 PDT
Comment on attachment 66366 [details] Patch > diff --git LayoutTests/inspector/debugger-suspend-active-dom-objects-expected.txt > +Debugger was enabled. > +Set timer for test function. > +Script execution paused. > +Shown alert while staying on a breakpoint > +Script execution resumed. > +Debugger was disabled. Middle line is the only one with a period. Maybe add a period? I had to have some comment in my review! =) > + setTimeout("void 0", 0); // Create a timer that will be suspended on a breakpoint. I didn't know that `void` could be used like this. I thought it needed parens. But, this is valid, so it can be left this way. Cool. r=me as long as you ran LayoutTests and nothing else failed.
Yury Semikhatsky
Comment 5 2010-09-06 22:58:15 PDT
66813(In reply to comment #4) > (From update of attachment 66366 [details]) > > diff --git LayoutTests/inspector/debugger-suspend-active-dom-objects-expected.txt > > +Debugger was enabled. > > +Set timer for test function. > > +Script execution paused. > > +Shown alert while staying on a breakpoint > > +Script execution resumed. > > +Debugger was disabled. > > Middle line is the only one with a period. Maybe add a period? > I had to have some comment in my review! =) > Done. Committed r66813.
Note You need to log in before you can comment on or make changes to this bug.