2010-08-31  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Joseph Pecoraro.

        Web Inspector: browser crashes on attempt to evaluate "alert(1)" while staying on a breakpoint
        https://bugs.webkit.org/show_bug.cgi?id=44943

        Test: inspector/debugger-suspend-active-dom-objects.html

        * page/PageGroupLoadDeferrer.cpp:
        (WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer):

2010-08-31  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: browser crashes on attempt to evaluate "alert(1)" while staying on a breakpoint
        https://bugs.webkit.org/show_bug.cgi?id=44943

        * inspector/debugger-suspend-active-dom-objects-expected.txt: Added.
        * inspector/debugger-suspend-active-dom-objects.html: Added.


Canonical link: https://commits.webkit.org/57571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66813 268f45cc-cd09-0410-ab3c-d52691b4dbfc