WebCore/page/PageGroupLoadDeferrer.cpp
@@ -39,14 +39,15 @@ PageGroupLoadDeferrer::PageGroupLoadDeferrer(Page* page, bool deferSelf)
     for (HashSet<Page*>::const_iterator it = pages.begin(); it != end; ++it) {
         Page* otherPage = *it;
         if ((deferSelf || otherPage != page)) {
-            if (!otherPage->defersLoading())
+            if (!otherPage->defersLoading()) {
                 m_deferredFrames.append(otherPage->mainFrame());
 
-            // This code is not logically part of load deferring, but we do not want JS code executed beneath modal
-            // windows or sheets, which is exactly when PageGroupLoadDeferrer is used.
-            for (Frame* frame = otherPage->mainFrame(); frame; frame = frame->tree()->traverseNext()) {
-                frame->document()->suspendActiveDOMObjects();
-                frame->document()->asyncScriptRunner()->suspend();
+                // This code is not logically part of load deferring, but we do not want JS code executed beneath modal
+                // windows or sheets, which is exactly when PageGroupLoadDeferrer is used.
+                for (Frame* frame = otherPage->mainFrame(); frame; frame = frame->tree()->traverseNext()) {
+                    frame->document()->suspendActiveDOMObjects();
+                    frame->document()->asyncScriptRunner()->suspend();
+                }
             }
         }
     }
